fix homepage styles to have matching spacing in vertical or horizontal orientation, and ensured all buttons have the same size

--- a/public/_variables.scss
+++ b/public/_variables.scss
@@ -33,7 +33,7 @@ $horizontal-gradient: linear-gradient(
   $blue 90.43%
 );
 
-$navbar-height: 3.5em;
+$navbar-height: 3.3em;
 @mixin remove-btn-default {
   cursor: pointer;
   border: none;
